--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@ body {
     backdrop-filter: blur(10px);
 }
 .navbar-brand, .nav-link { color: #FFFFFF !important; font-weight: 700; }
-.nav-link:hover, .nav-link.active { color: #ADD8F7 !important; }
 
-/* 分頁間距與放大效果 */
+/* 分頁 hover 效果（桌機） */
 .navbar-nav .nav-item {
     margin-left: 8px;
     margin-right: 8px;
@@ -47,12 +46,7 @@ body {
     transform: scale(1.2);
 }
 
-/* 點擊後縮回動畫 */
-.navbar-nav .nav-link.clicked {
-    transform: scale(1.0);
-    transition: transform 0.3s ease;
-}
-
+/* 手機：禁用分頁放大效果，避免跑版 */
 @media (max-width: 992px) {
     .navbar-nav .nav-link {
         display: block;
@@ -62,7 +56,7 @@ body {
     .navbar-nav .nav-link:hover,
     .navbar-nav .nav-link:focus,
     .navbar-nav .nav-link.active {
-        transform: scale(1.2);
+        transform: none !important;
     }
 }
 
@@ -84,10 +78,23 @@ body {
     font-size: 1.3rem;
     font-weight: 500;
     margin-top: 15px;
-    text-shadow: 1px 1px 5px rgba(0,0,0,0.3);
 }
 
-/* 卡片/方框風格 */
+/* 手機版 Hero 文字縮小 */
+@media (max-width: 576px) {
+    .hero {
+        padding: 80px 15px 50px 15px;
+    }
+    .hero h1 {
+        font-size: 1.8rem;
+        line-height: 1.3;
+    }
+    .hero p {
+        font-size: 1rem;
+    }
+}
+
+/* 卡片動態淡入 */
 .card-custom {
     background: #FFFFFF;
     border-radius: 0;
@@ -103,13 +110,20 @@ body {
     transform: translateY(0);
 }
 
-/* 活動資訊與導航標題紫色加粗 */
+/* 手機：卡片 padding 調整 */
+@media (max-width: 576px) {
+    .card-custom {
+        padding: 15px;
+    }
+}
+
+/* 區塊標題紫色 */
 .section-title {
     color: #6A0DAD;
     font-weight: 700;
 }
 
-/* 活動資訊內表格線 */
+/* 列表線條 */
 .list-group-item {
     border: 1px solid #DDD;
 }
