--- a/index.html
+++ b/index.html
@@ -1,291 +1,104 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>佳里奇美醫院 114年度 主治醫師暨臨床教師餐敘</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;600;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>佳里奇美醫院 114年度 主治醫師暨臨床教師餐敘</title>
 
-<style>
-body {
-    font-family: 'Noto Sans TC', sans-serif;
-    margin:0; padding:0;
-    background: linear-gradient(135deg,#E6E6FA,#FFFFFF);
-    overflow-x:hidden;
-    position:relative;
-}
+    <style>
+        body {
+            font-family: "Noto Sans TC", sans-serif;
+            margin: 0;
+            background: #f7f7f7;
+            color: #333;
+        }
 
-/* 背景氣泡動畫 */
-.bubble {
-    position: absolute;
-    border-radius: 50%;
-    opacity: 0.15;
-    pointer-events: none;
-    z-index: 0;
-}
+        header {
+            background: #005bab;
+            color: white;
+            padding: 20px 10px;
+            text-align: center;
+        }
 
-/* 導覽列 */
-.navbar {
-    background: linear-gradient(90deg, rgba(75,0,130,0.85), rgba(147,112,219,0.85));
-    backdrop-filter: blur(10px);
-}
-.navbar-brand, .nav-link { color: #FFFFFF !important; font-weight: 700; }
+        /* ★★★ 主標題強制分成兩行（手機版也不會被壓成一行） ★★★ */
+        .main-title {
+            font-size: 28px;
+            line-height: 1.4;
+            font-weight: 700;
+            display: inline-block;
+        }
+        .title-break {
+            display: block;   /* 強制換行 */
+        }
 
-/* 分頁 hover 效果（桌機） */
-.navbar-nav .nav-item {
-    margin-left: 8px;
-    margin-right: 8px;
-}
-.navbar-nav .nav-link {
-    transition: transform 0.2s ease, font-size 0.2s ease;
-}
-.navbar-nav .nav-link:hover,
-.navbar-nav .nav-link:focus,
-.navbar-nav .nav-link.active {
-    transform: scale(1.2);
-}
+        .sub-info {
+            font-size: 15px;
+            margin-top: 5px;
+            opacity: 0.9;
+        }
 
-/* 手機：禁用分頁放大效果，避免跑版 */
-@media (max-width: 992px) {
-    .navbar-nav .nav-link {
-        display: block;
-        text-align: center;
-        margin: 5px 0;
-    }
-    .navbar-nav .nav-link:hover,
-    .navbar-nav .nav-link:focus,
-    .navbar-nav .nav-link.active {
-        transform: none !important;
-    }
-}
+        /* 內容區塊 */
+        .section {
+            max-width: 900px;
+            margin: 25px auto;
+            background: #ffffff;
+            padding: 22px;
+            border-radius: 14px;
+            box-shadow: 0px 3px 10px rgba(0,0,0,0.08);
+        }
 
-/* Hero Banner */
-.hero {
-    position: relative;
-    background: linear-gradient(rgba(75,0,130,0.7), rgba(147,112,219,0.6)), url('https://images.unsplash.com/photo-1564865881850-17f48f6f16ff?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
-    color: #fff;
-    text-align: center;
-    padding: 120px 20px 80px 20px;
-    box-shadow: inset 0 0 100px rgba(0,0,0,0.3);
-}
-.hero h1 {
-    font-size: 3rem;
-    font-weight: 700;
-    text-shadow: 1px 1px 8px rgba(0,0,0,0.5);
-}
-.hero p {
-    font-size: 1.3rem;
-    font-weight: 500;
-    margin-top: 15px;
-}
+        h2 {
+            border-left: 6px solid #005bab;
+            padding-left: 10px;
+            margin-top: 0;
+        }
 
-/* 手機版 Hero 文字縮小 */
-@media (max-width: 576px) {
-    .hero {
-        padding: 80px 15px 50px 15px;
-    }
-    .hero h1 {
-        font-size: 1.8rem;
-        line-height: 1.3;
-    }
-    .hero p {
-        font-size: 1rem;
-    }
-}
+        /* ★★★ 活動資訊一覽的 Logo 手機不再顯示 17 ★★★ */
+        .event-logo {
+            width: 130px;
+            height: auto;         /* 避免被壓縮變形 */
+            display: block;
+            margin: 0 auto 10px auto;
+        }
 
-/* 卡片動態淡入 */
-.card-custom {
-    background: #FFFFFF;
-    border-radius: 0;
-    padding: 20px;
-    margin-bottom: 30px;
-    border: 1px solid #DDD;
-    opacity: 0;
-    transform: translateY(50px);
-    transition: all 0.8s ease;
-}
-.card-custom.visible {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-/* 手機：卡片 padding 調整 */
-@media (max-width: 576px) {
-    .card-custom {
-        padding: 15px;
-    }
-}
-
-/* 區塊標題紫色 */
-.section-title {
-    color: #6A0DAD;
-    font-weight: 700;
-}
-
-/* 列表線條 */
-.list-group-item {
-    border: 1px solid #DDD;
-}
-
-/* 按鈕 */
-.btn-custom {
-    background: linear-gradient(90deg, #4B0082, #9370DB);
-    color: #fff;
-    font-weight: 600;
-    border-radius: 8px;
-    padding: 10px 25px;
-    transition: 0.3s;
-    display: inline-block;
-}
-.btn-custom:hover {
-    background: linear-gradient(90deg, #9370DB, #4B0082);
-    transform: scale(1.05);
-}
-
-/* Footer */
-.footer {
-    background-color: #F3E8FF;
-    color: #4B0082;
-    padding: 15px 0;
-    text-align: center;
-    border-top: 1px solid #E0D0F0;
-}
-</style>
+        @media (max-width: 480px) {
+            .main-title {
+                font-size: 22px;
+            }
+        }
+    </style>
 </head>
+
 <body>
 
-<!-- 導覽列 -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-<div class="container">
-    <a class="navbar-brand" href="index.html">🎉 佳里奇美醫院餐敘</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse ms-auto" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link active" href="index.html">活動資訊</a></li>
-            <li class="nav-item"><a class="nav-link" href="agenda.html">活動流程</a></li>
-            <li class="nav-item"><a class="nav-link" href="registration.html">報名名單</a></li>
-            <li class="nav-item"><a class="nav-link" href="checkin-終版-F.html">當日報到系統</a></li>
-            <li class="nav-item"><a class="nav-link" href="honors.html">優良暨傑出教師芳名錄</a></li>
-            <li class="nav-item"><a class="nav-link" href="https://forms.gle/DBdC3ZScynWDzEps5" target="_blank">滿意度回饋</a></li>
-        </ul>
+<header>
+    <div class="main-title">
+        佳里奇美醫院 114年度
+        <span class="title-break">主治醫師暨臨床教師餐敘</span>
     </div>
+    <div class="sub-info">主辦單位：佳里奇美醫院　|　協辦單位：台南市醫師公會</div>
+</header>
+
+
+<!-- 活動資訊 -->
+<div class="section">
+    <img src="chimei-logo2.png" alt="Logo" class="event-logo">
+
+    <h2>活動資訊一覽</h2>
+    <p>📅 時間：2025 年 1 月 10 日（五） 18:30 入場</p>
+    <p>📍 地點：台南晶英酒店 3F</p>
+    <p>👥 參與對象：本院主治醫師、臨床教師及貴賓</p>
 </div>
-</nav>
 
-<!-- Hero Banner -->
-<section class="hero">
-    <h1>佳里奇美醫院 114年度 主治醫師暨臨床教師餐敘</h1>
-    <p>主辦單位：佳里奇美醫院 | 協辦單位：台南市醫師公會</p>
-</section>
 
-<main class="container mt-5">
+<!-- 分頁連結 -->
+<div class="section">
+    <h2>報到系統</h2>
+    <p>🔗 <a href="checkin.html">前往報到頁面</a></p>
 
-    <!-- 活動資訊 -->
-    <section class="mb-5">
-        <h3 class="section-title mb-3">📅 活動資訊一覽</h3>
-        <div class="row">
-            <div class="col-md-6 mb-3">
-                <section class="card-custom">
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><strong>日期：</strong> 114年11月28日 (五)</li>
-                        <li class="list-group-item"><strong>時間：</strong> 18:30 (18:00 開始報到)</li>
-                        <li class="list-group-item"><strong>主辦：</strong> 佳里奇美醫院</li>
-                        <li class="list-group-item"><strong>協辦：</strong> 台南市醫師公會</li>
-                    </ul>
-                </section>
-            </div>
-            <div class="col-md-6 mb-3">
-                <section class="card-custom">
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館 (華平館)</li>
-                        <li class="list-group-item"><strong>地址：</strong> 台南市安平區華平路156號</li>
-                        <li class="list-group-item"><strong>聯絡窗口：</strong> 教學研究組</li>
-                        <li class="list-group-item"><strong>聯絡分機：</strong> 32985/32987</li>
-                    </ul>
-                </section>
-            </div>
-        </div>
-    </section>
-
-    <!-- 交通與導航 -->
-    <section class="mb-5">
-        <h3 class="section-title mb-3">📍 交通與導航</h3>
-        <section class="card-custom">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館（台南市安平區華平路156號）</li>
-                <li class="list-group-item">
-                    <a href="https://www.google.com/maps?q=台南市安平區華平路156號" target="_blank" class="btn btn-custom mt-1">🚗 點擊前往 Google 地圖導航</a>
-                </li>
-                <li class="list-group-item">提醒：會場提供停車位，請依照現場指引停放車輛。</li>
-            </ul>
-        </section>
-    </section>
-
-</main>
-
-<footer class="footer">
-    <div class="container">
-        <span>© 佳里奇美醫院 教學研究組 版權所有</span>
-    </div>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- 背景氣泡動畫 -->
-<script>
-const bubbleColors=['#E6E6FA','#D8BFD8','#F0F8FF','#DDA0DD','#DA70D6','#9370DB'];
-const bubbles=[]; const bubbleCount=35;
-let width=window.innerWidth, height=window.innerHeight;
-for(let i=0;i<bubbleCount;i++){
-  let b=document.createElement('div'); b.classList.add('bubble');
-  let size=Math.random()*60+20;
-  b.style.width=size+'px'; b.style.height=size+'px';
-  b.style.left=Math.random()*width+'px'; b.style.top=Math.random()*height+'px';
-  b.style.background=bubbleColors[Math.floor(Math.random()*bubbleColors.length)];
-  document.body.appendChild(b);
-  bubbles.push({el:b,x:parseFloat(b.style.left),y:parseFloat(b.style.top),dx:(Math.random()-0.5)*0.6,dy:-Math.random()*0.8-0.2});
-}
-function animateBubbles(){
-  bubbles.forEach(b=>{ b.x+=b.dx;b.y+=b.dy;
-    if(b.y+parseFloat(b.el.style.height)<0){b.y=height;b.x=Math.random()*width;}
-    if(b.x<0)b.x=width;if(b.x>width)b.x=0;
-    b.el.style.left=b.x+'px';b.el.style.top=b.y+'px';
-  });
-  requestAnimationFrame(animateBubbles);
-}
-animateBubbles();
-window.addEventListener('resize',()=>{width=window.innerWidth;height=window.innerHeight;});
-</script>
-
-<!-- 卡片滾動淡入動畫 -->
-<script>
-const cards = document.querySelectorAll('.card-custom');
-function revealCards() {
-    const triggerBottom = window.innerHeight * 0.85;
-    cards.forEach(card => {
-        const cardTop = card.getBoundingClientRect().top;
-        if(cardTop < triggerBottom) {
-            card.classList.add('visible');
-        }
-    });
-}
-window.addEventListener('scroll', revealCards);
-window.addEventListener('load', revealCards);
-</script>
-
-<!-- 點擊縮回動畫 -->
-<script>
-const navLinks = document.querySelectorAll('.navbar-nav .nav-link');
-navLinks.forEach(link=>{
-    link.addEventListener('click', ()=>{
-        link.classList.add('clicked');
-        setTimeout(()=> link.classList.remove('clicked'), 300);
-    });
-});
-</script>
+    <h2>滿意度調查</h2>
+    <p>📝 <a href="https://forms.gle/DBdC3ZScynWDzEps5" target="_blank">填寫 Google 表單</a></p>
+</div>
 
 </body>
 </html>
