--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>佳里奇美醫院 114年度 主治醫師暨臨床教師餐敘</title>
 
     <style>
@@ -11,6 +11,10 @@
             margin: 0;
             background: #f7f7f7;
             color: #333;
+
+            /* ★ 強制所有裝置都用同樣寬度排版 ★ */
+            width: 100%;
+            min-width: 900px; /* 手機也會強制以 900px 寬度排版 */
         }
 
         header {
@@ -20,15 +24,16 @@
             text-align: center;
         }
 
-        /* ★★★ 主標題強制分成兩行（手機版也不會被壓成一行） ★★★ */
         .main-title {
             font-size: 28px;
             line-height: 1.4;
             font-weight: 700;
             display: inline-block;
+            white-space: nowrap; /* ★ 防止手機自動換行 ★ */
         }
+
         .title-break {
-            display: block;   /* 強制換行 */
+            display: block;
         }
 
         .sub-info {
@@ -37,9 +42,9 @@
             opacity: 0.9;
         }
 
-        /* 內容區塊 */
+        /* ★ 內容區寬度完全固定，不會因手機縮窄 ★ */
         .section {
-            max-width: 900px;
+            width: 900px;
             margin: 25px auto;
             background: #ffffff;
             padding: 22px;
@@ -53,19 +58,14 @@
             margin-top: 0;
         }
 
-        /* ★★★ 活動資訊一覽的 Logo 手機不再顯示 17 ★★★ */
         .event-logo {
             width: 130px;
-            height: auto;         /* 避免被壓縮變形 */
+            height: auto;
             display: block;
             margin: 0 auto 10px auto;
         }
 
-        @media (max-width: 480px) {
-            .main-title {
-                font-size: 22px;
-            }
-        }
+        /* ★ 移除所有 RWD，保持手機與電腦完全一致 ★ */
     </style>
 </head>
 
@@ -79,8 +79,6 @@
     <div class="sub-info">主辦單位：佳里奇美醫院　|　協辦單位：台南市醫師公會</div>
 </header>
 
-
-<!-- 活動資訊 -->
 <div class="section">
     <img src="chimei-logo2.png" alt="Logo" class="event-logo">
 
@@ -90,8 +88,6 @@
     <p>👥 參與對象：本院主治醫師、臨床教師及貴賓</p>
 </div>
 
-
-<!-- 分頁連結 -->
 <div class="section">
     <h2>報到系統</h2>
     <p>🔗 <a href="checkin.html">前往報到頁面</a></p>
