--- a/index.html
+++ b/index.html
@@ -177,8 +177,9 @@ body {
 
 <!-- Hero Banner -->
 <section class="hero">
-    <h1>佳里奇美醫院 114年度 主治醫師暨臨床教師餐敘</h1>
-    <p>主辦單位：佳里奇美醫院 | 協辦單位：台南市醫師公會</p>
+    <h1>114年度 主治醫師暨臨床教師餐敘</h1>
+    <p>主辦單位：佳里奇美醫院 | 
+       協辦單位：台南市醫師公會</p>
 </section>
 
 <main class="container mt-5">
@@ -289,4 +290,5 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
+
 
