--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ body {
 <!-- 導覽列 -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 <div class="container">
-    <a class="navbar-brand" href="index.html">🎉 佳里奇美醫院</a>
+    <a class="navbar-brand" href="index.html">🎉 佳里奇美醫院114年度</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -177,7 +177,7 @@ body {
 
 <!-- Hero Banner -->
 <section class="hero">
-    <h1>114年度 主治醫師暨臨床教師餐敘</h1>
+    <h1>主治醫師暨臨床教師餐敘</h1>
     <p>主辦單位：佳里奇美醫院 | 
        協辦單位：台南市醫師公會</p>
 </section>
@@ -290,5 +290,6 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
+
 
 
