--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@ body {
 <!-- Hero Banner -->
 <section class="hero">
     <h1>主治醫師暨臨床教師餐敘</h1>
-    <p>主辦單位：佳里奇美醫院 | 
-       協辦單位：台南市醫師公會</p>
+    <p>主辦：佳里奇美醫院 | 
+       協辦：台南市醫師公會</p>
 </section>
 
 <main class="container mt-5">
@@ -290,6 +290,7 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
+
 
 
 
