--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ body {
 
     <!-- 主辦協辦：改放最底部 -->
     <div class="hero-bottom-text">
-        主辦：佳里奇美醫院｜協辦：台南市醫師公會
+        主辦：教學研究組｜協辦：台南市醫師公會
     </div>
 </section>
 
@@ -307,3 +307,4 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
+
