--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@ body {
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><strong>日期：</strong> 114年11月28日 (五)</li>
                     <li class="list-group-item"><strong>時間：</strong> 18:30 (18:00 開始報到)</li>
-                    <li class="list-group-item"><strong>主辦：</strong> 佳里奇美醫院</li>
-                    <li class="list-group-item"><strong>協辦：</strong> 台南市醫師公會</li>
+                    <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館 (華平館)</li>
+                    <li class="list-group-item"><strong>地址：</strong> 台南市安平區華平路156號</li>
                 </ul>
             </section>
         </div>
@@ -206,10 +206,10 @@ body {
         <div class="col-md-6 mb-3">
             <section class="card-custom">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館 (華平館)</li>
-                    <li class="list-group-item"><strong>地址：</strong> 台南市安平區華平路156號</li>
-                    <li class="list-group-item"><strong>聯絡窗口：</strong> 教學研究組</li>
+                    <li class="list-group-item"><strong>聯絡窗口：</strong> 教學研究組余守純小姐/謝佾樺小姐</li>
                     <li class="list-group-item"><strong>聯絡分機：</strong> 32985/32987</li>
+                    <li class="list-group-item"><strong>主辦單位：</strong> 佳里奇美醫院教學研究組</li>
+                    <li class="list-group-item"><strong>協辦單位：</strong> 台南市醫師公會</li>
                 </ul>
             </section>
         </div>
@@ -307,5 +307,6 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
+
 
 
