--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ body {
         <div class="col-md-6 mb-3">
             <section class="card-custom">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><strong>聯絡窗口：</strong> 教學研究組余守純小姐/謝佾樺小姐</li>
+                    <li class="list-group-item"><strong>聯絡窗口：</strong> 余守純小姐/謝佾樺小姐</li>
                     <li class="list-group-item"><strong>聯絡分機：</strong> 32985/32987</li>
                     <li class="list-group-item"><strong>主辦單位：</strong> 佳里奇美醫院教學研究組</li>
                     <li class="list-group-item"><strong>協辦單位：</strong> 台南市醫師公會</li>
@@ -307,6 +307,7 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
+
 
 
 
