--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ body {
 
 <!-- 活動資訊 -->
 <section class="mb-5">
-    <h3 class="section-title mb-3">📅 活動資訊一覽</h3>
+    <h3 class="section-title mb-3">📆 活動資訊一覽</h3>
 
     <div class="row">
         <div class="col-md-6 mb-3">
@@ -307,6 +307,7 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
+
 
 
 
