--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@ body {
     background: linear-gradient(90deg, rgba(75,0,130,0.85), rgba(147,112,219,0.85));
     backdrop-filter: blur(10px);
 }
-.navbar-brand, .nav-link {
-    color: #FFFFFF !important;
-    font-weight: 700;
-}
+.navbar-brand, .nav-link { color: #FFFFFF !important; font-weight: 700; }
 
 /* 分頁 hover */
 .navbar-nav .nav-item { margin-left: 8px; margin-right: 8px; }
@@ -117,24 +114,27 @@ body {
 /* 標題 */
 .section-title {
     color:#6A0DAD; font-weight:700;
-    display:flex; align-items:center;
 }
 
 /* 小日曆圖示 */
 .section-title .calendar-icon {
     display:inline-block;
-    width:28px;
-    height:28px;
+    width:40px;
+    height:40px;
     background:#6A0DAD;
     color:#fff;
-    font-size:14px;
-    line-height:28px;
+    font-weight:700;
+    border-radius:6px;
     text-align:center;
-    border-radius:4px;
-    margin-right:8px;
+    margin-right:10px;
+    line-height:1;
+    font-size:14px;
+    padding-top:2px;
+    vertical-align:middle;
 }
+.section-title .calendar-icon .month { display:block; font-size:10px; opacity:0.8; }
+.section-title .calendar-icon .day { display:block; font-size:18px; font-weight:700; line-height:18px; }
 
-/* 列表線條 */
 .list-group-item { border:1px solid #DDD; }
 
 /* 按鈕 */
@@ -188,10 +188,8 @@ body {
 <!-- Hero Banner -->
 <section class="hero">
     <h1>主治醫師暨臨床教師餐敘</h1>
-
-    <!-- 主辦協辦：改放最底部 -->
     <div class="hero-bottom-text">
-        主辦：教學研究組｜協辦：台南市醫師公會
+        主辦：佳里奇美醫院教學研究組｜協辦：台南市醫師公會
     </div>
 </section>
 
@@ -200,7 +198,10 @@ body {
 <!-- 活動資訊 -->
 <section class="mb-5">
     <h3 class="section-title mb-3">
-        <span class="calendar-icon">28</span>
+        <span class="calendar-icon">
+            <span class="month">11月</span>
+            <span class="day">28</span>
+        </span>
         活動資訊一覽
     </h3>
 
@@ -215,7 +216,6 @@ body {
                 </ul>
             </section>
         </div>
-
         <div class="col-md-6 mb-3">
             <section class="card-custom">
                 <ul class="list-group list-group-flush">
@@ -278,14 +278,9 @@ for(let i=0;i<bubbleCount;i++){
 function animateBubbles(){
     bubbles.forEach(b=>{
         b.x+=b.dx; b.y+=b.dy;
-        if(b.y+parseFloat(b.el.style.height)<0){
-            b.y=height;
-            b.x=Math.random()*width;
-        }
-        if(b.x<0) b.x=width;
-        if(b.x>width) b.x=0;
-        b.el.style.left=b.x+'px';
-        b.el.style.top=b.y+'px';
+        if(b.y+parseFloat(b.el.style.height)<0){ b.y=height; b.x=Math.random()*width; }
+        if(b.x<0) b.x=width; if(b.x>width) b.x=0;
+        b.el.style.left=b.x+'px'; b.el.style.top=b.y+'px';
     });
     requestAnimationFrame(animateBubbles);
 }
