--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@ body {
     color:#6A0DAD; font-weight:700;
 }
 
-/* 小日曆圖示 */
+/* 小日曆圖示，底色改淡藍色 */
 .section-title .calendar-icon {
     display:inline-block;
     width:40px;
     height:40px;
-    background:#6A0DAD;
-    color:#fff;
+    background:#ADD8E6; /* 淡藍色 */
+    color:#000; /* 文字黑色以便對比 */
     font-weight:700;
     border-radius:6px;
     text-align:center;
@@ -254,64 +254,6 @@ body {
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- 背景氣泡動畫 -->
-<script>
-const bubbleColors=['#E6E6FA','#D8BFD8','#F0F8FF','#DDA0DD','#DA70D6','#9370DB'];
-const bubbles=[];
-const bubbleCount=35;
-let width=window.innerWidth, height=window.innerHeight;
-
-for(let i=0;i<bubbleCount;i++){
-    let b=document.createElement('div');
-    b.classList.add('bubble');
-    let size=Math.random()*60+20;
-    b.style.width=size+'px';
-    b.style.height=size+'px';
-    b.style.left=Math.random()*width+'px';
-    b.style.top=Math.random()*height+'px';
-    b.style.background=bubbleColors[Math.floor(Math.random()*bubbleColors.length)];
-    document.body.appendChild(b);
-    bubbles.push({el:b,x:parseFloat(b.style.left),y:parseFloat(b.style.top),dx:(Math.random()-0.5)*0.6,dy:-Math.random()*0.8-0.2});
-}
-
-function animateBubbles(){
-    bubbles.forEach(b=>{
-        b.x+=b.dx; b.y+=b.dy;
-        if(b.y+parseFloat(b.el.style.height)<0){ b.y=height; b.x=Math.random()*width; }
-        if(b.x<0) b.x=width; if(b.x>width) b.x=0;
-        b.el.style.left=b.x+'px'; b.el.style.top=b.y+'px';
-    });
-    requestAnimationFrame(animateBubbles);
-}
-animateBubbles();
-window.addEventListener('resize',()=>{width=window.innerWidth;height=window.innerHeight;});
-</script>
-
-<!-- 卡片滾動淡入 -->
-<script>
-const cards = document.querySelectorAll('.card-custom');
-function revealCards() {
-    const triggerBottom = window.innerHeight * 0.85;
-    cards.forEach(card => {
-        const cardTop = card.getBoundingClientRect().top;
-        if(cardTop < triggerBottom) card.classList.add('visible');
-    });
-}
-window.addEventListener('scroll', revealCards);
-window.addEventListener('load', revealCards);
-</script>
-
-<!-- 點擊縮回動畫 -->
-<script>
-const navLinks = document.querySelectorAll('.navbar-nav .nav-link');
-navLinks.forEach(link=>{
-    link.addEventListener('click', ()=>{
-        link.classList.add('clicked');
-        setTimeout(()=> link.classList.remove('clicked'), 300);
-    });
-});
-</script>
-
+<!-- 背景氣泡及卡片淡入動畫同之前 -->
 </body>
 </html>
