--- a/index.html
+++ b/index.html
@@ -17,15 +17,6 @@ body {
     position:relative;
 }
 
-/* 背景氣泡動畫 */
-.bubble {
-    position: absolute;
-    border-radius: 50%;
-    opacity: 0.15;
-    pointer-events: none;
-    z-index: 0;
-}
-
 /* 導覽列 */
 .navbar {
     background: linear-gradient(90deg, rgba(75,0,130,0.85), rgba(147,112,219,0.85));
@@ -35,28 +26,8 @@ body {
 
 /* 分頁 hover */
 .navbar-nav .nav-item { margin-left: 8px; margin-right: 8px; }
-.navbar-nav .nav-link {
-    transition: transform 0.2s ease, font-size 0.2s ease;
-}
-.navbar-nav .nav-link:hover,
-.navbar-nav .nav-link:focus,
-.navbar-nav .nav-link.active {
-    transform: scale(1.2);
-}
-
-/* 手機不放大 */
-@media (max-width: 992px) {
-    .navbar-nav .nav-link {
-        display:block;
-        text-align:center;
-        margin:5px 0;
-    }
-    .navbar-nav .nav-link:hover,
-    .navbar-nav .nav-link:focus,
-    .navbar-nav .nav-link.active {
-        transform:none !important;
-    }
-}
+.navbar-nav .nav-link { transition: transform 0.2s ease, font-size 0.2s ease; }
+.navbar-nav .nav-link:hover, .navbar-nav .nav-link:focus, .navbar-nav .nav-link.active { transform: scale(1.2); }
 
 /* Hero Banner */
 .hero {
@@ -74,8 +45,6 @@ body {
     font-weight: 700;
     text-shadow: 1px 1px 8px rgba(0,0,0,0.5);
 }
-
-/* 主辦協辦排到最底部 */
 .hero-bottom-text {
     margin-top: 30px;
     font-size: 1.1rem;
@@ -83,14 +52,29 @@ body {
     opacity: 0.95;
 }
 
-/* 手機版 Hero 文字縮小 */
-@media (max-width: 576px) {
-    .hero { padding: 80px 15px 50px 15px; }
-    .hero h1 { font-size: 1.8rem; line-height: 1.3; }
-    .hero-bottom-text { font-size: 0.95rem; margin-top: 20px; }
+/* 活動資訊小日曆 */
+.section-title {
+    color:#6A0DAD;
+    font-weight:700;
 }
+.calendar-icon {
+    display:inline-block;
+    width:40px;
+    height:40px;
+    background:#ADD8E6; /* 淡藍底色 */
+    color:#000;
+    font-weight:700;
+    border-radius:6px;
+    text-align:center;
+    margin-right:10px;
+    line-height:1.2;
+    font-size:14px;
+    vertical-align:middle;
+}
+.calendar-icon .month { display:block; font-size:10px; opacity:0.8; }
+.calendar-icon .day { display:block; font-size:18px; font-weight:700; line-height:18px; }
 
-/* 卡片淡入 */
+/* 卡片 */
 .card-custom {
     background: #FFFFFF;
     border-radius: 0;
@@ -101,41 +85,7 @@ body {
     transform: translateY(50px);
     transition: all 0.8s ease;
 }
-.card-custom.visible {
-    opacity:1;
-    transform: translateY(0);
-}
-
-/* 手機卡片縮小 padding */
-@media (max-width:576px){
-    .card-custom { padding: 15px; }
-}
-
-/* 標題 */
-.section-title {
-    color:#6A0DAD; font-weight:700;
-}
-
-/* 小日曆圖示，底色改淡藍色 */
-.section-title .calendar-icon {
-    display:inline-block;
-    width:40px;
-    height:40px;
-    background:#ADD8E6; /* 淡藍色 */
-    color:#000; /* 文字黑色以便對比 */
-    font-weight:700;
-    border-radius:6px;
-    text-align:center;
-    margin-right:10px;
-    line-height:1;
-    font-size:14px;
-    padding-top:2px;
-    vertical-align:middle;
-}
-.section-title .calendar-icon .month { display:block; font-size:10px; opacity:0.8; }
-.section-title .calendar-icon .day { display:block; font-size:18px; font-weight:700; line-height:18px; }
-
-.list-group-item { border:1px solid #DDD; }
+.card-custom.visible { opacity:1; transform: translateY(0); }
 
 /* 按鈕 */
 .btn-custom {
@@ -162,98 +112,91 @@ body {
 }
 </style>
 </head>
-
 <body>
 
 <!-- 導覽列 -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container">
-        <a class="navbar-brand" href="index.html">🎉 佳里奇美醫院114年度</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse ms-auto" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link active" href="index.html">活動資訊</a></li>
-                <li class="nav-item"><a class="nav-link" href="agenda.html">活動流程</a></li>
-                <li class="nav-item"><a class="nav-link" href="registration.html">報名名單</a></li>
-                <li class="nav-item"><a class="nav-link" href="checkin-終版-F.html">當日報到系統</a></li>
-                <li class="nav-item"><a class="nav-link" href="honors.html">優良暨傑出教師芳名錄</a></li>
-                <li class="nav-item"><a class="nav-link" href="https://forms.gle/DBdC3ZScynWDzEps5" target="_blank">滿意度回饋</a></li>
-            </ul>
-        </div>
+<div class="container">
+    <a class="navbar-brand" href="index.html">🎉 佳里奇美醫院114年度</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse ms-auto" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link active" href="index.html">活動資訊</a></li>
+            <li class="nav-item"><a class="nav-link" href="agenda.html">活動流程</a></li>
+            <li class="nav-item"><a class="nav-link" href="registration.html">報名名單</a></li>
+            <li class="nav-item"><a class="nav-link" href="checkin-終版-F.html">當日報到系統</a></li>
+            <li class="nav-item"><a class="nav-link" href="honors.html">優良暨傑出教師芳名錄</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://forms.gle/DBdC3ZScynWDzEps5" target="_blank">滿意度回饋</a></li>
+        </ul>
     </div>
+</div>
 </nav>
 
-<!-- Hero Banner -->
+<!-- Hero -->
 <section class="hero">
-    <h1>主治醫師暨臨床教師餐敘</h1>
-    <div class="hero-bottom-text">
-        主辦：佳里奇美醫院教學研究組｜協辦：台南市醫師公會
-    </div>
+<h1>主治醫師暨臨床教師餐敘</h1>
+<div class="hero-bottom-text">
+    主辦：佳里奇美醫院教學研究組｜協辦：台南市醫師公會
+</div>
 </section>
 
 <main class="container mt-5">
-
-<!-- 活動資訊 -->
 <section class="mb-5">
-    <h3 class="section-title mb-3">
-        <span class="calendar-icon">
-            <span class="month">11月</span>
-            <span class="day">28</span>
-        </span>
-        活動資訊一覽
-    </h3>
+<h3 class="section-title mb-3">
+    <span class="calendar-icon">
+        <span class="month">11月</span>
+        <span class="day">28</span>
+    </span>
+    活動資訊一覽
+</h3>
 
-    <div class="row">
-        <div class="col-md-6 mb-3">
-            <section class="card-custom">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><strong>日期：</strong> 114年11月28日 (五)</li>
-                    <li class="list-group-item"><strong>時間：</strong> 18:30 (18:00 開始報到)</li>
-                    <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館 (華平館)</li>
-                    <li class="list-group-item"><strong>地址：</strong> 台南市安平區華平路156號</li>
-                </ul>
-            </section>
-        </div>
-        <div class="col-md-6 mb-3">
-            <section class="card-custom">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><strong>聯絡窗口：</strong> 余守純小姐/謝佾樺小姐</li>
-                    <li class="list-group-item"><strong>聯絡分機：</strong> 32985/32987</li>
-                    <li class="list-group-item"><strong>主辦單位：</strong> 佳里奇美醫院教學研究組</li>
-                    <li class="list-group-item"><strong>協辦單位：</strong> 台南市醫師公會</li>
-                </ul>
-            </section>
-        </div>
+<div class="row">
+    <div class="col-md-6 mb-3">
+        <section class="card-custom">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item"><strong>日期：</strong> 114年11月28日 (五)</li>
+                <li class="list-group-item"><strong>時間：</strong> 18:30 (18:00 開始報到)</li>
+                <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館 (華平館)</li>
+                <li class="list-group-item"><strong>地址：</strong> 台南市安平區華平路156號</li>
+            </ul>
+        </section>
     </div>
+
+    <div class="col-md-6 mb-3">
+        <section class="card-custom">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item"><strong>聯絡窗口：</strong> 余守純小姐/謝佾樺小姐</li>
+                <li class="list-group-item"><strong>聯絡分機：</strong> 32985/32987</li>
+                <li class="list-group-item"><strong>主辦單位：</strong> 佳里奇美醫院教學研究組</li>
+                <li class="list-group-item"><strong>協辦單位：</strong> 台南市醫師公會</li>
+            </ul>
+        </section>
+    </div>
+</div>
 </section>
 
-<!-- 交通 -->
 <section class="mb-5">
-    <h3 class="section-title mb-3">📍 交通與導航</h3>
-    <section class="card-custom">
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館（台南市安平區華平路156號）</li>
-            <li class="list-group-item">
-                <a href="https://www.google.com/maps?q=台南市安平區華平路156號" target="_blank" class="btn btn-custom mt-1">
-                    🚗 點擊前往 Google 地圖導航
-                </a>
-            </li>
-            <li class="list-group-item">提醒：會場提供停車位，請依照現場指引停放車輛。</li>
-        </ul>
-    </section>
+<h3 class="section-title mb-3">📍 交通與導航</h3>
+<section class="card-custom">
+<ul class="list-group list-group-flush">
+    <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館（台南市安平區華平路156號）</li>
+    <li class="list-group-item">
+        <a href="https://www.google.com/maps?q=台南市安平區華平路156號" target="_blank" class="btn btn-custom mt-1">🚗 點擊前往 Google 地圖導航</a>
+    </li>
+    <li class="list-group-item">提醒：會場提供停車位，請依照現場指引停放車輛。</li>
+</ul>
 </section>
-
+</section>
 </main>
 
 <footer class="footer">
-    <div class="container">
-        <span>© 佳里奇美醫院 教學研究組 版權所有</span>
-    </div>
+<div class="container">
+<span>© 佳里奇美醫院 教學研究組 版權所有</span>
+</div>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- 背景氣泡及卡片淡入動畫同之前 -->
 </body>
 </html>
